# HomeAssignment4_SP2_App

./: CMakeLists.txt  Complex.hpp  Demo.cpp  Heap.hpp  Iterator.hpp  Makefile  Node.hpp  Project.pro  README.md  Test.cpp  TestCounter.cpp  Tree.hpp  TreeView.cpp  TreeView.hpp  doctest.h  main.cpp  test.pro  tree.pro  valgrind
